Add MIT License
- Add LICENSE file with MIT License
- Update package.json with author information

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "keywords": [],
-  "author": "",
+  "author": "Mohsen Kashefi",
   "license": "MIT",
   "private": true,
   "scripts": {
