--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,9 @@ coverage
 
 # Wrangler
 .wrangler
+
+# Deployment scripts with sensitive data (if any are created locally)
+deploy*.sh
+deploy*.cjs
+deploy*.py
+*deploy*.js
